--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@GavinDev1219/npm-test",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "npm test",
-  "main": "index.js",
+  "main": "dist/index.min.js",
   "scripts": {
-    "test": "exit 0"
+    "dev": "rollup -c -w",
+    "build": "rm -rf dist/ && rollup -c",
+    "test": "jest"
   },
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
+  },
+  "files": ["dist"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GavinDev1219/npm-test.git"
@@ -15,5 +22,13 @@
   "bugs": {
     "url": "https://github.com/GavinDev1219/npm-test/issues"
   },
-  "homepage": "https://github.com/GavinDev1219/npm-test#readme"
+  "homepage": "https://github.com/GavinDev1219/npm-test#readme",
+  "publishConfig": {
+    "@GavinDev1219:registry": "https://npm.pkg.github.com"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2"
+  }
 }
