--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -13,13 +13,26 @@ jobs:
           node ./scripts/update-version.js ${{ github.event.release.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set Git user
+        env:
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_EMAIL: ${{ github.actor }}@users.noreply.github.com
+        run: |
+          git config --global user.name "${{ env.GITHUB_ACTOR }}"
+          git config --global user.email "${{ env.GITHUB_EMAIL }}"
       - name: Commit changes
         run: |
-          git config user.name "gavindev1219"
-          git config user.email "gavin.dev@pgpg.la"
           git add .
           git commit -m "Update version to ${{ github.event.release.tag_name }} for release ${{ github.ref }}"
+          git_hash=$(git rev-parse --short HEAD)
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Tag Push changes
+        run: |
+          git tag -f ${{ github.event.release.tag_name }} $git_hash
+          git push --force origin ${{ github.event.release.tag_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
