--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@GavinDev1219:registry=https://npm.pkg.github.com
+@gavindev1219:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=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
