--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -3,6 +3,17 @@ on:
   release:
     types: [released]
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+
+
   update:
     runs-on: ubuntu-latest
     steps:
@@ -35,6 +46,11 @@ jobs:
           git push --force origin ${{ github.event.release.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  publish:
+    runs-on: ubuntu-latest
+    steps:
       - name: Npm Install Package
         run: |
           npm install rollup rollup-plugin-terser -D
