--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -43,10 +43,10 @@ jobs:
     steps:
       - name: Npm Install rollup
         run: npm install rollup rollup-plugin-terser -D
-      - name: Npm Install rollup
+      - name: Npm Install jest
         run: npm install jest -D
       - name: Npm Test
-        run: npm test
+        run: npm run test
       - run: echo "npm test complete 🚀"
       - name: Npm Build
         run: npm run build
