--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -4,7 +4,18 @@ on:
   release:
     types: [released]
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+
   update:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -39,6 +50,7 @@ jobs:
 
 
   publish:
+    needs: update
     runs-on: ubuntu-latest
     steps:
       - name: Npm Install rollup
