--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -53,13 +53,15 @@ jobs:
     needs: update
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Npm Install rollup
         run: npm install rollup rollup-plugin-terser -D
       - name: Npm Install jest
         run: npm install jest -D
-      # - name: Npm Test
-      #   run: npm run test
-      # - run: echo "npm test complete 🚀"
+      - name: Npm Test
+        run: npm run test
+      - run: echo "npm test complete 🚀"
       - name: Npm Build
         run: npm run build
       - run: echo "npm build complete 🚀"
