--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "jest": "^29.5.0",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "@gavindev1219/npm-test": "^1.0.31"
   }
 }
