--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -12,6 +12,8 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
+        env:
+            NODE_AUTH_TOKEN: ${{secrets.AUTH_TOKEN}}
       - run: npm test
 
   update:
@@ -20,11 +22,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Update package.json
         run: |
           node ./scripts/update-version.js ${{ github.event.release.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.AUTH_TOKEN }}
+
       - name: Set Git user
         env:
           GITHUB_ACTOR: ${{ github.actor }}
@@ -32,37 +36,50 @@ jobs:
         run: |
           git config --global user.name "${{ env.GITHUB_ACTOR }}"
           git config --global user.email "${{ env.GITHUB_EMAIL }}"
+
       - name: Commit changes
         run: |
           git add .
           git commit -m "Update version to ${{ github.event.release.tag_name }} for release ${{ github.ref }}"
           git_hash=$(git rev-parse --short HEAD)
+
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.AUTH_TOKEN }}
+
       - name: Tag Push changes
         run: |
           git tag -f ${{ github.event.release.tag_name }} $git_hash
           git push --force origin ${{ github.event.release.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.AUTH_TOKEN }}
-      - name: Npm Install rollup
+
+      - name: NPM Install rollup
         run: npm install rollup rollup-plugin-terser -D
-      - name: Npm Install jest
+
+      - name: NPM Install jest
         run: npm install jest -D
-      - name: Npm Test
+
+      - name: NPM Test
         run: npm run test
+
       - run: echo "npm test complete 🚀"
-      - name: Npm Build
+
+      - name: NPM Build
         run: npm run build
+
       - run: echo "npm build complete 🚀"
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - name: Npm Publish
+
+      - name: NPM Install
+        run: npm ci
+
+      - name: NPM Publish
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.AUTH_TOKEN}}
