--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -4,64 +4,46 @@ on:
   release:
     types: [released]
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 16
-  #     - run: npm config set registry https://registry.npmjs.org/
-  #     - run: npm ci
-  #     - run: npm test
-
   update:
-    # needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
-      - name: Update package.json
+
+      - name: Update Version
         run: |
           node ./scripts/update-version.js ${{ github.event.release.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set Git user
+
+      - name: Set Git User
         env:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_EMAIL: ${{ github.actor }}@users.noreply.github.com
         run: |
           git config --global user.name "${{ env.GITHUB_ACTOR }}"
           git config --global user.email "${{ env.GITHUB_EMAIL }}"
-      - name: Commit changes
+
+      - name: Commit Changes
         run: |
           git add .
           git commit -m "Update version to ${{ github.event.release.tag_name }} for release ${{ github.ref }}"
           git_hash=$(git rev-parse --short HEAD)
-      - name: Push changes
+
+      - name: Push Changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Tag Push changes
+
+      - name: Tag Push Changes
         run: |
           git tag -f ${{ github.event.release.tag_name }} $git_hash
           git push --force origin ${{ github.event.release.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - run: npm config set registry https://registry.npmjs.org/
-      # - name: Npm Install
-      #   run: npm install -g npm
-      # - name: Npm Install rollup
-      #   run: npm install rollup rollup-plugin-terser -D
-      # - name: Npm Install jest
-      #   run: npm install jest -D
-      # - name: Npm Test
-      #   run: npm run test
-      # - run: echo "npm test complete 🚀"
-      # - name: Npm Build
-      #   run: npm run build
-      # - run: echo "npm build complete 🚀"
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
