--- a/.github/workflows/update-action.yml
+++ b/.github/workflows/update-action.yml
@@ -51,6 +51,6 @@ jobs:
       - name: NPM Publish
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
